<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="en">

    <string name="app_name">BackGet</string>
    <string name="app_icon">App icon</string>
    <string name="container_below_appbar">Container below appbar</string>
    <string name="downloaded_txt">Downloaded</string>
    <string name="download_txt">Download</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="custom">Custom</string>
    <string name="pro">Pro</string>
    <string name="like_string">Liked</string>
    <string name="provide_read_permission">Provide read permission to display Images</string>
    <string name="by_unsplash">-Unsplash</string>
    <!-- TODO: Transition Names -->
    <string name="target_img_transition">transition_target</string>
    <string name="target_img_transition_parent">transition_target_parent</string>
    <string name="like_transition">transition_like</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closebtn">closeBtn</string>
    <string name="_0">0</string>
    <string name="loading">Loading</string>
    <string name="searchBoxHint">Search id, artist or topic</string>
    <string name="backget_pro">BackGet Pro</string>
    <string name="profile">Profile</string>
    <string name="search_your_thoughts">Search your thoughts</string>
    <string name="sync_from_unsplash_account">Sync from Unsplash Account</string>
    <string name="fetching_profile">Fetching Profile</string>
    <string name="share_backget">Share BackGet</string>
    <string name="desc_share">Help BackGet grow by sharing with friends and family</string>
    <string name="log_out">Log Out</string>
    <string name="more_from_the_artist">More from the artist</string>
    <string name="test">this is a demo string to see how the view looks. Yesssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>


</resources>