<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="bottomTxt"
            type="String" />

        <variable
            name="sync_from_unsplash"
            type="Boolean" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        tools:context=".Fragments.SettingsFragment">

        <TextView
            android:id="@+id/settingsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:overScrollMode="never"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomTxt"
            app:layout_constraintTop_toBottomOf="@+id/settingsTxt"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:paddingVertical="15dp"
                    android:id="@+id/profileBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.15
"/>

                    <ImageView
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/user_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_user_icon"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:autoSizeTextType="uniform"
                        android:autoSizeMinTextSize="13sp"
                        android:autoSizeMaxTextSize="25sp"
                        tools:targetApi="o"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:maxLines="1"
                        android:text="@string/profile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.00"
                        app:layout_constraintStart_toEndOf="@+id/user_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_right_round"
                        app:tint="#666666" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:paddingVertical="15dp"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.15
"/>
                    <include
                        android:id="@+id/includeImg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        layout="@layout/pro_btn"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:autoSizeTextType="uniform"
                        android:autoSizeMinTextSize="13sp"
                        android:autoSizeMaxTextSize="25sp"
                        tools:targetApi="o"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:maxLines="1"
                        android:text="@string/backget_pro"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.00"
                        app:layout_constraintStart_toEndOf="@+id/includeImg"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_right_round"
                        app:tint="#666666" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    app:dividerColor="#e5e5e5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:paddingVertical="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.15
"/>

                    <ImageView
                        android:id="@+id/syncImg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="30dp"
                        android:src="@drawable/sync"
                        android:padding="2dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:autoSizeTextType="uniform"
                        android:autoSizeMinTextSize="13sp"
                        android:autoSizeMaxTextSize="25sp"
                        tools:targetApi="o"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:maxLines="1"
                        android:ellipsize="end"
                        app:layout_constraintEnd_toStartOf="@+id/switchView"
                        android:text="@string/sync_from_unsplash_account"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/syncImg"
                        app:layout_constraintTop_toTopOf="parent"
                         />

                    <vn.luongvo.widget.iosswitchview.SwitchView
                        android:id="@+id/switchView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:checked="@{sync_from_unsplash}"
                        app:color_off="@color/switch_off"
                        app:color_on="@color/switch_on"
                        android:src="@drawable/ic_right_round"
                        app:tint="#666666" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/bottomTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@{bottomTxt}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/product_sans_regular"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>